# arc

./: AI_CHAT_FIXES_SUMMARY.md  AI_CHAT_ISSUES.md  AI_FUNCTION_CALLING_ANALYSIS.md  AUTH_FOOTER_INTEGRATION.md  CALENDAR_SWITCHER_ICON_ONLY.md  CALENDAR_SWITCHER_MULTILINGUAL.md  CALENDAR_SWITCHER_UPDATE.md  COMPLETE_PAGES_RESPONSIVE_REVIEW.md  FLUTTER_MIRROR_SETUP.md  INVENTORY_TRANSFER_ALTERNATIVE_ANALYSIS.md  INVENTORY_TRANSFER_BACKEND_ONLY_SCENARIO.md  INVOICE_ACCOUNTING_REVIEW.md  INVOICE_CHECK_ANALYSIS.md  JALALI_CALENDAR_FINAL.md  LINUX_SCRIPTS_README.md  NOTIFICATION_AI_INTEGRATION.md  PAYMENT_CALLBACK_TESTING.md  PAYMENT_IMPLEMENTATION_SUMMARY.md  PDF_TEMPLATE_IMPROVEMENTS.md  PRODUCT_CATEGORY_CODE_SCENARIO.md  PROJECT_FIELD_IMPLEMENTATION_COMPLETE.md  README.md  RELEASE_ANNOUNCEMENT.md  REPAIR_SHOP_FINAL_STATUS.md  REPAIR_SHOP_IMPLEMENTATION_SUMMARY.md  REPAIR_SHOP_QUICK_START.md  RESPONSIVE_DESIGN_REVIEW.md  STREAMING_IMPLEMENTATION_SCENARIO.md  SUPPORT_OPERATORS_IMPLEMENTATION_COMPLETE.md  TELEGRAM_ANNOUNCEMENT.txt  VERSION_MANAGEMENT.md  WARRANTY_404_REDIRECT_SUMMARY.md  WARRANTY_ACTIVATION_ACCESS_IMPLEMENTED.md  WARRANTY_ACTIVATION_PAGE_ACCESS.md  WARRANTY_ACTIVATION_PROCESS.md  WARRANTY_BUSINESS_DETECTION.md  WARRANTY_BUSINESS_SCOPED_IMPLEMENTATION.md  WARRANTY_PLUGIN_FIXES.md  WARRANTY_PLUGIN_ISSUES.md  basalam.json  (+46 more)
hesabixAPI/: .gitignore  .pre-commit-config.yaml  =0.9.14  =1.15.0  API_README.md  Dockerfile  README.md  SYSTEMD_SERVICE.md  alembic_build.ini  analyze_business_endpoints.py  analyze_migrations.py  api.hesabix.ir.conf  check_notification_issue.py  check_ticket_notification.py  debug_telegram_notification.py  docker-compose.yml  env.example  f.mirror.hesabix.ir.conf  fix_null_strings.sql  gradle.mirror.hesabix.ir.conf  maven.mirror.hesabix.ir.conf  migration_checkpoint.json  mysql.conf  p-mirror-pypi.conf  pyproject.toml  rq_worker.py  run_migrations.py  run_notification_worker.sh  test_create_ticket.sh  test_create_ticket_via_api.sh  test_notification_manual.md  test_notification_simple.py  test_notify_operators.py  test_ticket_notification.py  test_ticket_with_notification.py
hesabixAPI/.migrate_venv/: pyvenv.cfg
hesabixAPI/app/: main.py  openapi_list_query_patch.py  openapi_local_docs.py  openapi_query_filter_docs.py
hesabixAPI/docs/: APPLY_MYSQL_CONFIG.md  BANK_CASH_PETTY_MIGRATION_ANALYSIS.md  BUSINESS_NOTIFICATION_SYSTEM.md  BUSINESS_USER_MIGRATION_ANALYSIS.md  CHECK_MIGRATION_ANALYSIS.md  CONNECTION_POOL_1000_CONNECTIONS.md  CRM_CHAT_WEBSOCKET_DEPLOYMENT.md  DOCUMENTS_MIGRATION_SCENARIO.md  EMAIL_VERIFICATION_SCENARIO.md  INVOICE_ISSUES_AND_SCENARIOS.md  JOIN_PERMISSION_IMPLEMENTATION_SUMMARY.md  JOIN_PERMISSION_SYSTEM.md  MIGRATION_BRANCH_MANAGEMENT.md  MISSING_PERMISSIONS_ANALYSIS.md  MYSQL_10000_CONNECTIONS_SETUP.md  NOTIFICATION_MODERATION_WORKER_DEPLOYMENT.md  PERMISSIONS_SYSTEM.md  PHASE1_QUICK_WINS_IMPLEMENTATION.md  PHASE3_OPTIMIZATION_REPORT.md  PHASE4_BACKGROUND_JOBS.md  PHASE5_OPTIMIZATION_REPORT.md  RECEIPT_PAYMENT_MIGRATION_SCENARIO.md  REDIS_ADMIN_SETTINGS.md  REDIS_SETUP.md  SERVICE_LOGS_ADMIN_API.md  WAREHOUSE_MIGRATION_ANALYSIS.md
hesabixAPI/examples/: permission_usage.py
hesabixAPI/hesabix_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
hesabixAPI/migrations/: CONSOLIDATION_SCRIPT.md  FINAL_STATUS.md  FINAL_SUMMARY.md  INIT_SCHEMA_MERGE_SUMMARY.md  MERGE_COMPLETE.md  MIGRATION_CLEANUP_REPORT.md  MIGRATION_CONSOLIDATION_PLAN.md  MIGRATION_REBUILD_SUMMARY.md  REBUILD_MIGRATIONS.md  SEED_DATA_MIGRATIONS.md  STANDARDIZATION_SUMMARY.md  alembic.ini  cleanup_duplicates.py  env.py  extract_seed_data.py  extracted_seed_data.py  extracted_seed_data_fixed.py  find_duplicate_migrations.py  fix_chain.py  fix_init_schema_indent.py  merge_init_schema.py  merge_init_schema_final.py  merge_init_schema_properly.py  rebuild_migrations.py  rename_to_standard_format.py  sorted_migrations.txt
hesabixAPI/nginx-conf.d/: pypi-cache.conf  rate-limit-pypi.conf
hesabixAPI/nginx-snippets/: f.mirror-hesabix-server.inc  gradle.mirror-hesabix-server.inc  maven.mirror-hesabix-server.inc  p.mirror-pypi-location.inc
hesabixAPI/scripts/: MIGRATION_SCRIPTS_ANALYSIS.md  MIGRATION_TEST_RESULTS.md  add_basalam_plugin.py  add_check_status_columns.py  add_customer_club_plugin.py  add_distribution_plugin.py  add_inventory_mode_columns.py  add_is_active_to_products.py  add_repair_shop_plugin.py  add_warranty_plugin.py  add_warranty_plugin.sql  analyze_accounts_migration.py  analyze_documents_migration.py  analyze_remaining_invoices.md  analyze_return_invoices_migration.py  analyze_support_tickets_migration.py  apply_mysql_10000_connections.sql  (+69 more)
(+2375 files in other folders)
