[project]
name = "hesabix-api"
version = "0.1.0"
description = "Hesabix Accounting API - FastAPI + SQLAlchemy + PostgreSQL"
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "Hesabix Team" }
]

dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "sqlalchemy>=2.0.30",
    "psycopg2-binary>=2.9.0",
    "pydantic>=2.7.0",
    "email-validator>=2.0.0.post2",
    "pydantic-settings>=2.3.0",
    "structlog>=24.1.0",
    "alembic>=1.13.2",
	"argon2-cffi>=23.1.0",
	"bcrypt>=4.0.0",
	"passlib[bcrypt]>=1.7.4",
	"pillow>=10.3.0",
    "phonenumbers>=8.13.40",
    "Babel>=2.15.0",
    "jdatetime>=4.1.0",
    "weasyprint>=62.3",
    "jinja2>=3.1.0",
    "openpyxl>=3.1.0",
    "cryptography>=42.0.0",
    "httpx>=0.27.0",
    "python-multipart>=0.0.6",
    "openai>=1.0.0",
    "redis>=5.0.0",
    "hiredis>=2.2.0",
    "rq>=1.15.0",
    "psutil>=5.9.0",
    "simpleeval>=0.9.14",
    "croniter>=2.0.0",
    "pytz>=2024.1",
    "paramiko>=3.4.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
  "httpx>=0.27.0",
  "pytest-asyncio>=0.23.0",
  "mypy>=1.10.0",
  "ruff>=0.5.0",
  "black>=24.4.0",
  "pre-commit>=3.7.0"
]

# Optional dependencies for Voice Chat (STT/TTS/VAD)
# نصب این گروه باعث نصب وابستگی‌های سنگین (torch) می‌شود؛ بهتر است فقط در سرورهای voice فعال شود.
voice = [
  "webrtcvad>=2.0.10",
  "numpy>=1.26.0",
  "faster-whisper>=1.0.3",
  "TTS>=0.22.0"
]

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"
lint.select = ["E", "F", "I", "N", "UP", "B", "C4", "SIM"]
lint.ignore = ["E203", "E501"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
disallow_untyped_defs = true
no_implicit_optional = true
exclude = ["migrations/"]

[tool.setuptools]

[tool.setuptools.packages.find]
include = ["app*", "adapters*", "migrations*", "tests*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]


